@@ -88,4 +88,6 @@ public class Const {
 
     public static final String PREF_KEY_IS_CUSTOM_APP_ID = "IsCustomAppId";
     public static final String PREF_KEY_CUSTOM_APP_ID = "CustomAppId";
+
+    public static final String TEST_DATA_DIR_NAME = "test_data";
 }
